# Flighty

./: README.md  backend_docker_setup.md  branch_info.txt  connection_fix_summary.txt  environment_setup_summary.txt  flutter_test_fix_summary.txt  flutter_test_status.txt  install_all.sh  run_all_tests.sh  run_backend.sh  run_frontend.sh  setup_postgres.sh  start_all.sh  test_all.sh  test_aviationstack.py  test_aviationstack_detailed.py
flight_backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  init_db.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_all_tests.sh  startup.sh  test_integration.py  test_rate_limiting_caching.py
flight_backend/app/: config.py  main.py
flight_backend/app/api/: admin.py  airlines.py  airports.py  auth.py  bookings.py  flights.py  webhooks.py
flight_backend/app/core/: aviationstack_client.py  cache.py  rate_limit_config.py  rate_limiter.py  security.py
flight_backend/app/database/: database.py
flight_backend/app/models/: airline.py  airport.py  analytics_event.py  base.py  booking.py  flight_cache.py  user.py  webhook_subscription.py
flight_backend/app/schemas/: airline.py  airport.py  booking.py  flight.py  user.py  webhook.py
flight_backend/app/tasks/: sync.py  webhooks.py
flight_backend/tests/: conftest.py  test_main.py
flight_backend/tests/integration/: test_rate_limiting_caching.py
flight_backend/tests/unit/: test_cache.py  test_rate_limiter.py
flight_viewer/: .gitignore  README.md  flutter_test_verification.sh  pubspec.yaml  run_flutter_tests.sh  (+5 more)
(+66 files in other folders)
